// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`protocol matrix snapshot > hysteria2 → clash 1`] = `
"# Generated by MConvert
# !flag: mihomo
# Profile: matrix
# Generated at: [TIMESTAMP]
proxies:
  - {name: 🇩🇪 DE-Hy2, type: hysteria2, server: de.example.com, port: 36000, udp: true, tls: true, alpn: [h3], password: hy2-pwd, up: 200 Mbps, down: 500 Mbps, obfs: salamander, obfs-password: obfsx, ports: 36000-36100, hop-interval: 30}
proxy-groups: []
rules: []
"
`;

exports[`protocol matrix snapshot > hysteria2 → surge 1`] = `
"# Generated by MConvert
# Profile: matrix
# Generated at: [TIMESTAMP]

[General]

[Proxy]
DIRECT = direct
🇩🇪 DE-Hy2 = hysteria2, de.example.com, 36000, password=hy2-pwd, upload-bandwidth=200, download-bandwidth=500, obfs=salamander, obfs-password=obfsx, port-hopping=36000-36100, port-hopping-interval=30, alpn=h3, udp-relay=true

[Rule]
"
`;

exports[`protocol matrix snapshot > snell → clash 1`] = `
"# Generated by MConvert
# !flag: mihomo
# Profile: matrix
# Generated at: [TIMESTAMP]
# WARN: Skipped snell node "🇹🇼 TW-Snell" in clash output (use surge target instead)
proxies: []
proxy-groups: []
rules: []
"
`;

exports[`protocol matrix snapshot > snell → surge 1`] = `
"# Generated by MConvert
# Profile: matrix
# Generated at: [TIMESTAMP]

[General]

[Proxy]
DIRECT = direct
🇹🇼 TW-Snell = snell, tw.example.com, 443, psk=snell-psk, version=4, obfs=http, obfs-host=tw.example.com, udp-relay=true

[Rule]
"
`;

exports[`protocol matrix snapshot > ss-2022 → clash 1`] = `
"# Generated by MConvert
# !flag: mihomo
# Profile: matrix
# Generated at: [TIMESTAMP]
proxies:
  - {name: 🇯🇵 JP-SS, type: ss, server: ss.example.com, port: 8388, udp: true, cipher: 2022-blake3-aes-128-gcm, password: Pwd@Strong}
proxy-groups: []
rules: []
"
`;

exports[`protocol matrix snapshot > ss-2022 → surge 1`] = `
"# Generated by MConvert
# Profile: matrix
# Generated at: [TIMESTAMP]

[General]

[Proxy]
DIRECT = direct
🇯🇵 JP-SS = ss, ss.example.com, 8388, encrypt-method=2022-blake3-aes-128-gcm, password=Pwd@Strong, udp-relay=true

[Rule]
"
`;

exports[`protocol matrix snapshot > trojan-ws → clash 1`] = `
"# Generated by MConvert
# !flag: mihomo
# Profile: matrix
# Generated at: [TIMESTAMP]
proxies:
  - {name: 🇭🇰 HK-Trojan, type: trojan, server: hk.example.com, port: 443, udp: true, tls: true, sni: hk.cdn.example.com, password: 'trojan-pass,with,commas', network: ws, ws-opts: {path: /tj, headers: {Host: hk.cdn.example.com}}}
proxy-groups: []
rules: []
"
`;

exports[`protocol matrix snapshot > trojan-ws → surge 1`] = `
"# Generated by MConvert
# Profile: matrix
# Generated at: [TIMESTAMP]

[General]

[Proxy]
DIRECT = direct
🇭🇰 HK-Trojan = trojan, hk.example.com, 443, password="trojan-pass,with,commas", ws=true, ws-path=/tj, ws-headers=Host:hk.cdn.example.com, sni=hk.cdn.example.com, udp-relay=true

[Rule]
"
`;

exports[`protocol matrix snapshot > tuic-v5 → clash 1`] = `
"# Generated by MConvert
# !flag: mihomo
# Profile: matrix
# Generated at: [TIMESTAMP]
proxies:
  - {name: 🇰🇷 KR-TUIC, type: tuic, server: kr.example.com, port: 1024, udp: true, tls: true, sni: kr.example.com, alpn: [h3], uuid: 12341234-1234-1234-1234-123412341234, password: tuic-pwd, version: 5, congestion-controller: bbr}
proxy-groups: []
rules: []
"
`;

exports[`protocol matrix snapshot > tuic-v5 → surge 1`] = `
"# Generated by MConvert
# Profile: matrix
# Generated at: [TIMESTAMP]

[General]

[Proxy]
DIRECT = direct
🇰🇷 KR-TUIC = tuic, kr.example.com, 1024, uuid=12341234-1234-1234-1234-123412341234, password=tuic-pwd, sni=kr.example.com, alpn=h3, udp-relay=true

[Rule]
"
`;

exports[`protocol matrix snapshot > vless-reality → clash 1`] = `
"# Generated by MConvert
# !flag: mihomo
# Profile: matrix
# Generated at: [TIMESTAMP]
proxies:
  - {name: 🇺🇸 US-Reality, type: vless, server: us.example.com, port: 443, udp: true, tls: true, sni: www.cloudflare.com, client-fingerprint: chrome, uuid: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee, flow: xtls-rprx-vision, reality-opts: {public-key: REAL_PUB_KEY, short-id: abcd1234}}
proxy-groups: []
rules: []
"
`;

exports[`protocol matrix snapshot > vless-reality → surge 1`] = `
"# Generated by MConvert
# Profile: matrix
# Generated at: [TIMESTAMP]

[General]

[Proxy]
DIRECT = direct
🇺🇸 US-Reality = vless, us.example.com, 443, username=aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee, vless-flow=xtls-rprx-vision, reality-public-key=REAL_PUB_KEY, reality-short-id=abcd1234, sni=www.cloudflare.com, tls-fingerprint=chrome, udp-relay=true

[Rule]
"
`;

exports[`protocol matrix snapshot > vmess-ws → clash 1`] = `
"# Generated by MConvert
# !flag: mihomo
# Profile: matrix
# Generated at: [TIMESTAMP]
proxies:
  - {name: 🇸🇬 SG-VMess-WS, type: vmess, server: sg.example.com, port: 443, udp: true, tls: true, sni: sg.example.com, uuid: 11111111-2222-3333-4444-555555555555, alterId: 0, cipher: auto, network: ws, ws-opts: {path: /vm, headers: {Host: sg.example.com}}}
proxy-groups: []
rules: []
"
`;

exports[`protocol matrix snapshot > vmess-ws → surge 1`] = `
"# Generated by MConvert
# Profile: matrix
# Generated at: [TIMESTAMP]

[General]

[Proxy]
DIRECT = direct
🇸🇬 SG-VMess-WS = vmess, sg.example.com, 443, username=11111111-2222-3333-4444-555555555555, encrypt-method=auto, ws=true, ws-path=/vm, ws-headers=Host:sg.example.com, sni=sg.example.com, udp-relay=true

[Rule]
"
`;

exports[`protocol matrix snapshot > wireguard → clash 1`] = `
"# Generated by MConvert
# !flag: mihomo
# Profile: matrix
# Generated at: [TIMESTAMP]
proxies:
  - {name: 🛡 WARP, type: wireguard, server: engage.cloudflareclient.com, port: 2408, udp: true, private-key: PRIVATE_KEY_BASE64, public-key: PUBLIC_KEY_BASE64, preshared-key: PSK_BASE64, ip: 172.16.0.2/32, ipv6: 2606:4700:110:8caf:5d6f:f0ec:7e2b:33d7/128, reserved: AAAA, mtu: 1280}
proxy-groups: []
rules: []
"
`;

exports[`protocol matrix snapshot > wireguard → surge 1`] = `
"# Generated by MConvert
# Profile: matrix
# Generated at: [TIMESTAMP]

[General]

[Proxy]
DIRECT = direct
🛡 WARP = wireguard, engage.cloudflareclient.com, 2408, private-key=PRIVATE_KEY_BASE64, public-key=PUBLIC_KEY_BASE64, preshared-key=PSK_BASE64, self-ip=172.16.0.2/32, self-ip-v6=2606:4700:110:8caf:5d6f:f0ec:7e2b:33d7/128, mtu=1280, udp-relay=true

[Rule]
"
`;
